testing immutable and pure render mixin

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
         <title>FluxNote</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        
+
         <!-- build:css assets/styles/vendors.css -->
         <!-- bower:css -->
         <link type="text/css" rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link type="text/css" rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css" />
         <!-- endbower -->
         <!-- endbuild -->
-        
+
         <link type="text/css" rel="stylesheet" href="assets/styles/main.css">
     </head>
     <body>
@@ -35,6 +35,7 @@
         <script src="bower_components/es6-shim/es6-shim.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
-        <script type="text/javascript" src="scripts/app.js"></script>
+        <script src="http://localhost:8080/webpack-dev-server.js"></script>
+        <script type="text/javascript" src="bundle.js"></script>
     </body>
 </html>
